--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.5.4",
     "@astrojs/rss": "^4.0.9",
-    "astro": "^4.16.13"
+    "astro": "^4.16.13",
+    "preact": "^10.25.0"
   }
 }
